# ReinforcementLearningUsers

./: .gitignore  README.md  pyproject.toml  setup.sh
data/: SalesCRM - CRM (Clean).csv  SalesCRM - CRM.csv
notebooks/: DemoTraining.ipynb  Exploratory Data Analysis.ipynb  Training.ipynb
notebooks/eda_tools/: probability_distribution.py  statistical_tools.py
notebooks/eda_tools/graphs/: continuous_feature_binary_target.py  discrete_feature_binary_target.py  two_discrete_features_binary_target.py
src/: user_flow_environment.py
tests/: test_flow_environment.py
