[tool.poetry]
name = "salesreinforcer"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
plotly = "^5.18.0"
ipykernel = "6.26"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.0"
dateparser = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipywidgets = "7.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
