[tool.poetry]
name = "salesreinforcer"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
plotly = "^5.18.0"
ipykernel = "6.26"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.0"
dateparser = "^1.2.0"
networkx = "^3.2.1"
dash = "^2.14.1"
dash-cytoscape = "^0.3.0"
matplotlib = "^3.8.2"
stable-baselines3 = "^2.2.1"
tensorboard = "^2.15.1"
azureml-tensorboard = "^1.54.0"


[tool.poetry.group.dev.dependencies]
ipywidgets = "7.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
